--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/crypto-js": "^4.2.2",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "crypto-js": "^4.2.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.2"
   },
