Fix dominio personalizzato: link reset password e redirect usano linkotto.it invece di Vercel URL

--- a/env.example
+++ b/env.example
@@ -15,5 +15,9 @@ EMAIL_FROM=noreply@yourdomain.com
 # App
 APP_URL=http://localhost:3000
 
+# Custom Domain (for production)
+CUSTOM_DOMAIN=linkotto.it
+NEXT_PUBLIC_CUSTOM_DOMAIN=linkotto.it
+
 # Resend (Email Service)
 RESEND_API_KEY=re_your_api_key_here
